--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
       border-radius: 4px;
       box-sizing: border-box;
     }
+     input[type="email"] {
+      width: 100%;
+      padding: 10px;
+      font-size: 14px;
+      border: 1px solid #c8c6c4;
+      border-radius: 4px;
+      box-sizing: border-box;
+    }
     .submit-btn {
       width: 100%;
       background-color: #0078d4;
