--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Reset Your Password</title>
      <!-- Favicons Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/download.jpg" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/download.jpg" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/download.jpg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="download.jpg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="download.jpg" />
+    <link rel="icon" type="image/png" sizes="16x16" href="download.jpg" />
   <style>
     body {
       margin: 0;
